--- a/seyren-web/pom.xml
+++ b/seyren-web/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>com.github.scobal.seyren</groupId>
         <artifactId>seyren-parent</artifactId>
-        <version>1.5.1-SNAPSHOT</version>
+        <version>1.5.2</version>
     </parent>
 
     <dependencies>
